# Citadel-Alpha-Infrastructure

./: .cursorrules  .env  .gitignore  .rulesfile  .windsurfrules  HXP-Gov-Coding-Standards.md  KDD.md  OpenAI_Compatibility_Analysis.md  PRODUCTION_DEPLOYMENT.md  README.md  README.md.backup  Rules.md  Task_5.3_Results.md  activate_citadel.sh  requirements.txt
0.0-HANA-X-Governance/: README.md  Traceability_Matrix_vLLM_Installation_Project.md
0.0-HANA-X-Program/: 01-HXP-PRD.md  04-HXP-Status.md  09-HXP-KDD.md  11-HXP-Traceability-Matrix.md
0.0-Project-Management/: HXP-Gov-Coding-Standards.md  HXP-Vector-Database-Server-Architecture.md
0.11-HANA-X-Shared-Library/: README.md
0.12-X-Archive/: README.md
0.13-HANA-X-Program/: program_defect_tracker.md  program_infrastructure_backlog.md
Citadel-01/: .gitignore  README.md  logs
HX-Enterprise-LLM-Server/: README.md
X-Archive/: TS-vLLM-001-Test-Suite-Specification.md
X-Doc/: Citadel AI Operating System - Orchestration Server (Embeddings Node) Implementation Plan.md  LLM-02 Implementation Detailed Task Plan.md  TASK_TEMPLATE.md
X-Documents/: INTERNAL_LINK_AUDIT_REPORT.md
config/: config_manager.py  logging_config.py  model_mapping.py  ollama_config.md  settings.py  settings_new.py
documentation/: LLM-02_API_Reference.md  LLM-02_Knowledge_Transfer.md  LLM-02_Operations_Manual.md  LLM-02_System_Architecture.md
examples/: EX-TP-001_PRD.md  EX-TP-001_RESULTS.md  EX-TP-001_TASK_LIST.md  EX-TP-001_TRACEABILITY_MATRIX.md
governance/: OOP_Coding_Standards_&_Rules.md  Traceability Matrix – vLLM Installation Project.txt:Zone.Identifier  hx-server-landscape.md  prd_vllm_model_install.txt  vllm_installation_status.txt  vllm_project_backlog.txt  vllm_project_doc_overview.txt  vllm_test_guidelines.md
hx-orchestration-server/: .env  .env.example  .rulesfile  README.md  celery_app.py  main.py  main_r53.py  main_simple.py  r53_api_models.py  r53_base_classes.py  r53_common_utilities.py  r53_middleware.py  requirements.txt  test_embeddings.py
hxp_enterprise_llm/: README.md
projects/: PRD-vLLM-001-Dual-Server-Deployment.md  (+1 more)
x-Achive/0.4-HXP-Shared-Library/: .gitignore  pyproject.toml
x-Achive/0.4-HXP-Shared-Library/docs/: HXP-Vector-Database-Shared-Library.md
x-Achive/0.4-HXP-Shared-Library/scripts/: validate_system.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/cli/: main.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/cli/commands/: database.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/core/: embedding_service.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/external_models/: integration_patterns.py  model_registry.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/gateway/: api_gateway.py  request_router.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/migration/: __init__.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/orchestration/: service_manager.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/protocols/: graphql_schema.py  grpc_service.py
x-Achive/0.4-HXP-Shared-Library/src/hana_x_vector/utils/: config.py
x-Achive/0.4-HXP-Shared-Library/tests/integration/: test_migration_integration.py
(+706 files in other folders)
