[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hana-x-vector-shared"
version = "1.0.0"
description = "HANA-X Vector Database Shared Library - Unified API Gateway & External Model Integration"
readme = "README.md"
license = {text = "MIT"}
authors = [
    {name = "Citadel AI Team", email = "dev@citadel-ai.com"}
]
classifiers = [
    "Development Status :: 5 - Production/Stable",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.12",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
    "Topic :: Database :: Database Engines/Servers",
]

dependencies = [
    # Core dependencies
    "pydantic>=2.5.0",
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    
    # Vector database
    "qdrant-client>=1.8.0",
    "numpy>=1.24.0",
    "scipy>=1.11.0",
    
    # API protocols
    "strawberry-graphql>=0.214.0",
    "grpcio>=1.59.0",
    "grpcio-tools>=1.59.0",
    "protobuf>=4.25.0",
    
    # External integrations
    "aiohttp>=3.9.0",
    "aioredis>=2.0.0",
    "asyncpg>=0.29.0",
    
    # AI/ML dependencies
    "torch>=2.1.0",
    "transformers>=4.36.0",
    "sentence-transformers>=2.2.0",
    
    # Monitoring and logging
    "prometheus-client>=0.19.0",
    "structlog>=23.2.0",
    "opentelemetry-api>=1.21.0",
    
    # Configuration and utilities
    "pyyaml>=6.0.0",
    "python-dotenv>=1.0.0",
    "typer>=0.9.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
    "black>=23.0.0",
    "isort>=5.12.0",
    "mypy>=1.7.0",
    "locust>=2.17.0",
]

gpu = [
    "torch[cuda]>=2.1.0",
    "nvidia-ml-py>=12.535.0",
]

[project.urls]
"Homepage" = "https://github.com/citadel-ai/hana-x-vector-shared"
"Documentation" = "https://docs.citadel-ai.com/hana-x-vector"
"Repository" = "https://github.com/citadel-ai/hana-x-vector-shared"
"Bug Tracker" = "https://github.com/citadel-ai/hana-x-vector-shared/issues"

[project.scripts]
hana-x-vector = "hana_x_vector.cli.main:main"
hana-x-db = "hana_x_vector.cli.commands.database:main"
hana-x-migrate = "hana_x_vector.cli.commands.migration:main"
hana-x-health = "hana_x_vector.cli.commands.health:main"
hana-x-models = "hana_x_vector.cli.commands.models:main"

[tool.setuptools.packages.find]
where = ["src"]

[tool.black]
line-length = 88
target-version = ['py312']

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["hana_x_vector"]

[tool.mypy]
python_version = "3.12"
strict = true
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]
addopts = "--cov=hana_x_vector --cov-report=html --cov-report=term-missing"
asyncio_mode = "auto"
